<resources>
    <string name="app_name">HowsTheClimate</string>
    <string name="default_location">Fetching Location</string>
    <string name="default_temp">NA</string>
    <string name="change_city_description">Click Here to Change City</string>
    <string name="weather_description">This is the weather symbol</string>
    <string name="back_button_description">Dismiss Change City Screen</string>
    <string name="get_weather">Change City</string>
    <string name="city_query">Enter city</string>
    <string name="state_query">Enter state</string>
    <string name="country_query">Enter country</string>
</resources>
