<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/city_background"
    >

    <EditText
        android:id="@+id/countryET"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/stateET"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/country_query"
        android:inputType="textAutoCorrect"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginTop="10dp"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backButton"
        android:src="@drawable/left"
        android:background="@null"
        android:contentDescription="@string/back_button_description"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:id="@+id/stateET"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/queryET3"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/state_query"
        android:inputType="textAutoCorrect"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/queryET3"
        android:layout_width="match_parent"
        android:layout_height="60dp"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="261dp"
        android:background="@color/white"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/city_query"
        android:imeOptions="actionGo"
        android:inputType="textAutoCorrect"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/cityET"
        android:layout_width="match_parent"
        android:layout_height="60dp"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="261dp"
        android:background="@color/white"
        android:gravity="center_vertical|center_horizontal"
        android:hint="Enter city"
        android:inputType="textAutoCorrect"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/getWeatherTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:text="@string/get_weather"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="50sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="172dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="77dp"
        app:srcCompat="@drawable/search"
        android:onClick="checkWeather"/>

</RelativeLayout>