<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/backgroun_final"
    tools:context="com.sh4dow.climate.WeatherController">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="169dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="15dp"
            android:weightSum="3">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:src="@drawable/humidity_edit" />

            <TextView
                android:id="@+id/humidity"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="HU"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="15dp"
            android:weightSum="3">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:src="@drawable/wind_speed" />


            <TextView
                android:id="@+id/windspeed"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="WS"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="15dp"
            android:weightSum="3">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:src="@drawable/air_pressure_edited" />

            <TextView
                android:id="@+id/pressure"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="PR"
                android:textSize="15sp" />

        </LinearLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/locationTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="88dp"
        android:text="@string/default_location"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/tempTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/changeCityButton"
        android:layout_marginEnd="45dp"
        android:text="@string/default_temp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#BF360C"
        android:textSize="90sp" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/changeCityButton"
        android:src="@drawable/searchbutton"
        android:contentDescription="@string/change_city_description"
        android:background="@null"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="233dp"
        android:layout_below="@+id/imageView7"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/weatherSymbolIV"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/weather_description"
            android:src="@drawable/dunno" />
    </FrameLayout>

    <TextView
        android:id="@+id/condition"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_centerInParent="true"
        android:padding="10dp"
        android:text="Light Rain"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="43dp"
        android:layout_height="120dp"
        android:layout_alignTop="@+id/tempTV"
        android:layout_marginStart="-45dp"
        android:layout_toEndOf="@+id/tempTV"
        app:srcCompat="@drawable/temperature" />

    <TextView
        android:id="@+id/mintemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/changeCityButton"
        android:layout_below="@+id/maxtemp"
        android:text="18"
        android:textColor="#01579B"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/maxtemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/changeCityButton"
        android:layout_below="@+id/tempTV"
        android:text="35"
        android:textColor="#DD2C00"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="23dp"
        android:layout_height="25dp"
        android:layout_above="@+id/mintemp"
        android:layout_toStartOf="@+id/mintemp"
        app:srcCompat="@drawable/maxtemp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="24dp"
        android:layout_height="26dp"
        android:layout_alignTop="@+id/mintemp"
        android:layout_toStartOf="@+id/mintemp"
        app:srcCompat="@drawable/mintemp3" />

    <!--<Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tempTV"
        android:text="Check Pollution"
        android:textColor="#000000"
        android:padding="10dp"
        android:background="@drawable/poliback"
        />-->

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/skull"
        android:onClick="ShowPopup"/>


</RelativeLayout>
